--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <section class="dios" id="dios">
             <h3 class="dios-titulo"> Dios Zoro </h3>
             <ul class="dios-contenido">
-                <li class="dios-izq"></li>
-                <li class="dios-der">
+                <li class="dios-izq">
                     <h2>Ronoa Zoro</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem dolor modi magni, enim facilis distinctio earum perspiciatis quae quibusdam natus nihil, quo doloremque possimus officia asperiores totam quaerat atque dolores voluptates accusamus corporis consequatur hic! Quia eligendi mollitia deleniti rerum exercitationem a quaerat doloremque inventore ex, deserunt suscipit? Aspernatur dolores minima nam deserunt reiciendis laboriosam corrupti qui voluptas consectetur porro, numquam nobis labore totam quibusdam libero. Quos ea pariatur quae eum, dolorum omnis minus iste. Dicta cupiditate quia ea molestiae id dolor unde facilis. Id quae laborum vero vitae ad, tempora sed reiciendis cum deserunt velit consectetur illum ut maxime.</p>
                     <a href="" class="dios-btn">Más Información...</a>
                 </li>
+                <li class="dios-der"></li>
             </ul>
         </section>
         <section class="mugiwaras" id="mugiwaras">
@@ -56,14 +56,14 @@
                 </li>
             </ul>
         </section>
-        <section class="Marina" id="Marina">
-            <h3 class="Marina-titulo"> Marina </h3>
-            <ul class="Marina-contenido">
-                <li class="Marina-izq"></li>
-                <li class="Marina-der">
+        <section class="marina" id="marina">
+            <h3 class="marina-titulo"> Marina </h3>
+            <ul class="marina-contenido">
+                <li class="marina-izq"></li>
+                <li class="marina-der">
                     <h2>Marina</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem dolor modi magni, enim facilis distinctio earum perspiciatis quae quibusdam natus nihil, quo doloremque possimus officia asperiores totam quaerat atque dolores voluptates accusamus corporis consequatur hic! Quia eligendi mollitia deleniti rerum exercitationem a quaerat doloremque inventore ex, deserunt suscipit? Aspernatur dolores minima nam deserunt reiciendis laboriosam corrupti qui voluptas consectetur porro, numquam nobis labore totam quibusdam libero. Quos ea pariatur quae eum, dolorum omnis minus iste. Dicta cupiditate quia ea molestiae id dolor unde facilis. Id quae laborum vero vitae ad, tempora sed reiciendis cum deserunt velit consectetur illum ut maxime.</p>
-                    <a href="" class="Marina-btn">Más Información...</a>
+                    <a href="" class="marina-btn">Más Información...</a>
                 </li>
             </ul>
         </section>
